# RigidBodyPhysics

./: .gitignore  .gitmodules  README.md
documentation/: Outline.docx  dev_notes.aux  dev_notes.fdb_latexmk  dev_notes.fls  dev_notes.tex
notes/: debug-notes.txt
python/: animation.ipynb  pendulum3.csv
src/: CMakeLists.txt  autodifftest.cpp  compile.bat  constraint.h  constraint_solver.h  evolution.h  force.h  interaction.h  logger.h  macros.h  main.cpp  ndsolve.h  out.txt  particle.h  pendulum3.csv  series.h  uforces.h  universe.h  varvector.h
src/core/: CMakeLists.txt  constraint.cpp  constraint.hpp  csolver.cpp  csolver.hpp  evolution.cpp  evolution.hpp  force.cpp  force.hpp  interaction.cpp  interaction.hpp  logger.cpp  logger.hpp  macros.hpp  ndsolve.cpp  ndsolve.hpp  particle.hpp  series.cpp  series.hpp  uforces.hpp  universe.cpp  universe.hpp
